--- a/src/css/title.scss
+++ b/src/css/title.scss
@@ -3,7 +3,7 @@
   header {
     min-height: 90vh;
     @include respond(phone){
-      min-height: 70vh
+      min-height: 60vh
     }
     margin: auto;
     top: 0; left: 0; bottom: 0; right: 0;
@@ -11,12 +11,12 @@
 
 
   .mask {
-    height: 106px;
+    height: 125px;
     position: relative;
     overflow: hidden;
     margin-top: var(--offset);
     @include respond(phone) {
-      height: 90px;
+      height: 118px;
     }
   }
   
@@ -24,10 +24,7 @@
     display: block;
     box-sizing: border-box;
     position: absolute;
-    top: 100px;
-    @include respond(phone) {
-      top: 90px;
-    }
+    top: 115px;
     padding-bottom: var(--offset);
     white-space: nowrap;   
     background-size: 100% 100%;
@@ -41,25 +38,16 @@
     display: block;
     box-sizing: border-box;
     position: absolute;
-    
     top: 0;
-    
     background-image: inherit;
     background-size: 100% 100%;
-    background-repeat: no-repeat;
-    
+    background-repeat: no-repeat;  
     animation-timing-function: cubic-bezier(0.45, 0, 0.2, 1);
-    animation-duration: 1s;
-    
+    animation-duration: 1s;  
     transition-timing-function: cubic-bezier(0.45, 0, 0.2, 1);
     transition-duration: .5s;
-    transition-property: opacity;
-    
-    height: 106px;
-    @include respond(phone) {
-      height: 90px;
-    }
-    
+    transition-property: opacity;   
+    height: 120px;  
     border-radius: 10px;
     
     clip-path: inset(0 100% 0 0);
@@ -113,12 +101,4 @@
   .mask span:nth-child(7) {
     background-image: linear-gradient(45deg, #053964 50%, #011627);
   }
-
-
-  .intro {
-    line-height: 2em;
-font-size: 1.6em;
-color: #222
-  }
-
 
